tests/baselines/reference/stringLiteralMatchedInSwitch01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralMatchedInSwitch01.ts(7,10): error TS2322: Type 'string' is not assignable to type '("a" | "b")[] | "a" | "b"'.
  Type 'string' is not assignable to type '"b"'.
tests/cases/conformance/types/stringLiteral/stringLiteralMatchedInSwitch01.ts(8,10): error TS2322: Type 'string' is not assignable to type '("a" | "b")[] | "a" | "b"'.
  Type 'string' is not assignable to type '"b"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralMatchedInSwitch01.ts (2 errors) ====
    
    type S = "a" | "b";
    type T = S[] | S;
    
    var foo: T;
    switch (foo) {
        case "a":
             ~~~
!!! error TS2322: Type 'string' is not assignable to type '("a" | "b")[] | "a" | "b"'.
!!! error TS2322:   Type 'string' is not assignable to type '"b"'.
        case "b":
             ~~~
!!! error TS2322: Type 'string' is not assignable to type '("a" | "b")[] | "a" | "b"'.
!!! error TS2322:   Type 'string' is not assignable to type '"b"'.
            break;
        default:
            foo = (foo as S[])[0];
            break;
    }